correction bug double scrollbar

--- a/starterOnly/modal.css
+++ b/starterOnly/modal.css
@@ -625,3 +625,15 @@ footer {
     font-size: 1.2rem;
   }
 }
+
+@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+  .container-overflowing-horizontally-class {
+    padding-bottom: 20px;
+  }
+}
+
+@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+  .container-overflowing-vertically-class {
+    padding-right: 20px;
+  }
+}
